	server synchronization."
	* Added support for chatrooms in CrossServerSynchronization.

2012-11-11  GoldenKevin  (revision 172)

	* Dropped in CrossServerSynchronization to replace InterChannelCommunication
	and replaced any references of the old class name. Also refactored several
	methods so "interchannel" can no longer be found in any identifiers.
	* Fixed logic errors for player scan, whisper, buddy invites, and chatroom
	invites in CrossServerSynchronization.
	* Fixed CrossServerSynchronization.initializeLocalChannels.
	* Shortened the channel change response timeout to match cross channel
	synchronization blocking call timeout.

2012-11-11  GoldenKevin  (revision 173)

	* Implemented CrossChannelCommandTarget.

2012-11-12  GoldenKevin  (revision 174)

	* Rearranged !ban command arguments so ban reason can have spaces.
	* Rewrote !shutdown command to be more faithful to its inspiration.
	* Fixed bugs in chatroom invite and closing.
	* Split up receivedCenterServerSynchronziationPacket so each party operation
	gets its own method in CenterServerSynchronization.
	* Fixed error when deleting a buddy who has been invited but has not
	accepted the invite yet.
	* Prevent players from inviting as a buddy a player who has already invited
	himself/herself.
	* Players may re-add another player that they have deleted from their buddy
	list who still has himself/herself on their buddy list.

2012-11-14  GoldenKevin  (revision 175)

	* !tp command now gives all warnings to players before the warp is
	actually performed.
	* Disambiguated the subjects in !tp command warnings.
	* PartyList member order should now be consistent for each channel's copy of
	a party.
	* PartyList members can now be accessed by index.
	* Fixed DefaultNpcShopDataLoader.loadAll().

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.