@@ -141,6 +141,7 @@ public final class Skills {
 		BISHOP_MANA_REFLECTION = 2321002,
 		BISHOP_INFINITY = 2321004,
 		HOLY_SHIELD = 2321005,
+		BISHOP_RESURRECTION = 2321006,
 		BAHAMUT = 2321003,
 
 		FOCUS = 3001003,
@@ -235,6 +236,7 @@ public final class Skills {
 		SNATCH = 5121005,
 		BARRAGE = 5121007,
 		SPEED_INFUSION = 5121009,
+		TIME_LEAP = 5121010,
 
 		GUN_MASTERY = 5200000,
 		GRENADE = 5201002,
